--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -1,4 +1,45 @@
-.navbar-expand-md .navbar-nav .nav-link {
-  padding-left: 30px;
-  padding-right: 30px;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: darkgray;
+}
+
+.logo {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 22px;
+}
+.logo:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-links {
+  margin: 0px;
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
+}
+
+.nav-links li {
+  list-style: none;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+}
+
+.burger {
+  display: none;
+}
+
+.burger div {
+  width: 23px;
+  height: 2px;
+  background-color: white;
+  margin: 5px;
 }
