--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,3 +2,44 @@
   padding: 0px;
   margin: 0px;
 }
+
+.text-warning:hover {
+  cursor: pointer;
+}
+
+.navbar-nav > .nav-item {
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.navbar-nav > .nav-item > .nav-link {
+  color: #ffc107;
+  opacity: 0.9;
+}
+
+.navbar-nav > .nav-item > .nav-link:hover {
+  color: #ffc107;
+  cursor: pointer;
+}
+
+.navbar-nav > .nav-item > .nav-link:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #ffc107;
+  transition: 0.3s;
+}
+
+.navbar-nav > .nav-item > .nav-link:hover::after {
+  width: 100%;
+  transition: 0.3s;
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,193,7, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: #ffc107;
+}
