Removed white space between paralax and content

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,6 +1,7 @@
-.jumbotron {
+div > .jumbotron {
   min-height: 95vh;
   background-color: inherit;
+  margin-bottom: 0px;
 }
 
 .container .row .col-sm {
