--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,6 +3,14 @@
   margin: 0px;
 }
 
+#navbar {
+  z-index: 1000;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
 .text-warning:hover {
   cursor: pointer;
 }
@@ -12,17 +20,21 @@
   margin-right: 25px;
 }
 
-.navbar-nav > .nav-item > .nav-link {
+.navbar-nav > .nav-item a {
+  text-decoration: none;
+}
+
+.navbar-nav > .nav-item .nav-link {
   color: #ffc107;
   opacity: 0.9;
 }
 
-.navbar-nav > .nav-item > .nav-link:hover {
+.navbar-nav > .nav-item .nav-link:hover {
   color: #ffc107;
   cursor: pointer;
 }
 
-.navbar-nav > .nav-item > .nav-link:after {
+.navbar-nav > .nav-item .nav-link:after {
   content: "";
   display: block;
   width: 0;
@@ -31,7 +43,7 @@
   transition: 0.3s;
 }
 
-.navbar-nav > .nav-item > .nav-link:hover::after {
+.navbar-nav > .nav-item .nav-link:hover::after {
   width: 100%;
   transition: 0.3s;
 }
