Add contact link btn, update link button style

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -8,6 +8,6 @@ div > .jumbotron {
   margin-bottom: 10vh;
 }
 
-.container .row .col-sm button {
+.container .row .col-sm .btn {
   margin-top: 2vh;
 }
