Remove warning <a> can't be child of <a>, updated style

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,7 +24,8 @@
   text-decoration: none;
 }
 
-.navbar-nav > .nav-item .nav-link {
+.navbar-nav > .nav-item .nav-link,
+.navbar-nav > .nav-item .nav-link:focus {
   color: #ffc107;
   opacity: 0.9;
 }
