successfully call api to get valid exercise data

--- a/src/components/ExercisePage.css
+++ b/src/components/ExercisePage.css
@@ -1,3 +1,13 @@
 .excercise-page {
   padding-top: 58px;
 }
+
+.excercise-page > div > div .alert > p,
+li,
+em {
+  color: black;
+}
+
+.black-text {
+  color: black;
+}
